# nanoforge

./: .gitignore  CMakeLists.txt  README.md
libs/raylib-cpp/include/: Matrix.hpp  MeshUnmanaged.hpp  Rectangle.hpp
models/: colors.yml  test.yml
projects/msvc/: nanoblock.sln  nanoblock.vcxproj
projects/xcode/nanoforge.xcodeproj/: project.pbxproj
projects/xcode/nanoforge.xcodeproj/project.xcworkspace/xcuserdata/jack.xcuserdatad/: UserInterfaceState.xcuserstate
projects/xcode/nanoforge.xcodeproj/xcshareddata/xcschemes/: nanoforge.xcscheme
projects/xcode/nanoforge.xcodeproj/xcuserdata/jack.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: context.h  defines.h  input.cpp  input.h  main.cpp  par_shapes.h  renderer.cpp  renderer.h  ui.cpp  ui.h
src/glad/: glad.c  glad.h
src/io/: node.hpp
src/model/: common.h  model.cpp  model.h  piece.h
